Kill me, shelf fungus gen NOT GENERATE NATURALLY AND GENERATE LOW, I NEED HELP